--- a/src/main/resources/templates/admin-template/san_pham/san-pham.html
+++ b/src/main/resources/templates/admin-template/san_pham/san-pham.html
@@ -282,7 +282,9 @@
                             <tr th:each="sanPham,iterStat : ${listSP}">
                                 <td th:text="${iterStat.index+1}"></td>
                                 <td>
-                                    <img th:src="${sanPham.hinhAnh}" alt="Hình ảnh sản phẩm" style="width: 100px; height: auto;"/>
+                                    <div th:each="url : ${#strings.listSplit(sanPham.hinhAnh, ',')[0]}" style="display: inline-block; margin-right: 5px;">
+                                        <img th:src="${url}" alt="Hình ảnh sản phẩm" style="width: 100px; height: auto;"/>
+                                    </div>
                                 </td>
                                 <td th:text="${sanPham.ma}"></td>
                                 <td th:text="${sanPham.ten}"></td>
