--- a/src/main/resources/templates/admin-template/thuong_hieu/sua-thuong-hieu.html
+++ b/src/main/resources/templates/admin-template/thuong_hieu/sua-thuong-hieu.html
@@ -22,7 +22,7 @@
 
   <div class="d-flex align-items-center justify-content-between">
     <a href="/ban-hang-tai-quay/hoa-don" class="logo d-flex align-items-center">
-      <img src="/static/img/logo.png" alt="">
+      <img src="/static/img/logo_teehaven.png" alt="">
       <span class="d-none d-lg-block">TeeHaven</span>
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -99,7 +99,7 @@
           </a>
         </li>
         <li>
-          <a href="/admin/tay-ao/">
+          <a href="/admin/tay-ao">
             <i class="bi bi-circle"></i><span>Tay áo</span>
           </a>
         </li>
