--- a/src/main/resources/templates/admin-template/thuong_hieu/thuong-hieu.html
+++ b/src/main/resources/templates/admin-template/thuong_hieu/thuong-hieu.html
@@ -281,8 +281,8 @@
                             <tr th:each="thuongHieu,iterStat : ${listThuongHieu}">
                                 <td th:text="${iterStat.index+1}"></td>
                                 <td th:text="${thuongHieu.ten}"></td>
-                                <td class="trangthaidkd" th:if="${thuongHieu.trangThai==0}">Đang kinh doanh</td>
-                                <td class="trangthainkd" th:if="${thuongHieu.trangThai==1}">Ngừng kinh doanh</td>
+                                <td class="trangthaidkd" th:if="${thuongHieu.trangThai==0}">Đang hoạt động</td>
+                                <td class="trangthainkd" th:if="${thuongHieu.trangThai==1}">Ngừng hoạt động</td>
                                 <td>
                                     <a th:href="@{/admin/thuong-hieu/view-update/{id}(id=${thuongHieu.id})}"
                                        class="btn btn-warning">
