--- a/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
+++ b/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
@@ -1820,7 +1820,7 @@
 
     </div>
     <div class="credits">
-        Website bán giày Tee Haven
+        Website bán áo Tee Haven
     </div>
 </footer><!-- End Footer -->
 
