--- a/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
+++ b/src/main/resources/templates/admin-template/hoa-don-chi-tiet.html
@@ -625,7 +625,7 @@
                                                                th:field="*{gioiTinh}"
                                                                value="0">
                                                         <label class="form-check-label">
-                                                            Nam2
+                                                            Nam
                                                         </label>
 
                                                         <input class="form-check-input"
